--- a/richardstyle.css
+++ b/richardstyle.css
@@ -17,7 +17,7 @@ html, body{
     height: auto;
     margin: 0;
     padding: 0;
-    background-color: #f8f4e1;
+    background-color: #F8FAFC;
 }
 
 .picture {
@@ -41,19 +41,20 @@ html, body{
 
 header{
     width: 100%;
-    height: 8%;
+    height: 10%;
 
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10%;
-    background-color: #cce5e7;
+    background-color: #0F172A;
     position: fixed;
     z-index: 1;
 }
 
 header > a > h1{
   font-size: 17px;
+  color: #F8FAFC;
 }
 
 header a{
@@ -69,7 +70,7 @@ header h1 {
 }
 
 header h1:hover {
-    background-color: #ffb1c2;
+    background-color: #0D9488;
     text-decoration: none;
     border-radius: 0.3em;
  
@@ -100,7 +101,8 @@ header h1:hover {
     flex-direction: column;
     justify-content: left;
     gap: 0;
-    white-space: nowrap;
+    white-space: normal;
+    padding-right: 30px;
 }
 
 
