--- a/richardstyle.css
+++ b/richardstyle.css
@@ -37,7 +37,9 @@ html, body{
     width: 100%;
     min-height: 100vh;
     height: auto;
-    border-bottom: black 2px solid;
+
+    margin-bottom: -75px;
+
 }
 
 .headername{
@@ -205,6 +207,104 @@ header a h1:hover {
 .icon img:hover{
     transform: scale(1.2);
 }
+
+/*expeience section*/
+
+.experience {
+  margin: 2rem auto;
+  max-width: 1500px;
+  padding: 3rem 1.25rem;
+  /*border: black 2px solid;*/
+}
+
+.timeline {
+  list-style: none;
+  padding: 0 5rem;
+}
+
+.tl-item{
+    padding-bottom: 2.2rem;
+}
+
+.xp-title{
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 800;
+  margin-bottom: 5rem;
+  color: #1e293b;
+}
+ 
+.tl-card {
+  background: #0d162b;
+  border-radius: 2rem;
+  color: #F8FAFC;
+  padding: 30px;
+  transition: transform .15s ease, box-shadow .15s ease;
+  font-size: large;
+}
+
+.tl-card:hover {
+   box-shadow: 0 4px 10px rgb(53, 53, 53);
+   transform: translateY(-10px);
+}
+
+.tl-top {
+  align-items: flex-start;
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+}
+
+.tl-top h3{
+  font-size: 1.5rem;
+}
+
+.tl-meta {
+  color: #dbeafe;
+  margin: .2rem 0 0;
+}
+
+.tl-badge {
+  background: #dcfce7;
+  border-radius: .5rem;
+  color: #15803d;
+  font-size: 1rem;
+  font-weight: 500;
+  padding: .35rem .5rem;
+  white-space: nowrap;
+}
+
+
+.badge-blue {
+  background: #dbeafe;
+  color: #1d4ed8;
+}
+
+.tl-bullets {
+  color: #dbeafe;
+  margin: .6rem 0 .4rem 1rem;
+}
+
+.tl-bullets li {
+  margin: .25rem 0;
+}
+
+/* tech chips */
+.tl-tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: .4rem;
+  margin-top: .35rem;
+  color: rgb(204, 204, 204);
+}
+
+.tl-tags span {
+  border-radius: .5rem;
+  font-size: .78rem;
+  padding: .25rem .5rem;
+}
+
+
 
 /*Skills section*/
 
