--- a/blogstyle.css
+++ b/blogstyle.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background-image: url("/images/busan.jpg");
+    background-image: url("images/background.jpg");
     background-size: cover;   
     background-position: top center;
     background-repeat: no-repeat;  
