--- a/japanstyle.css
+++ b/japanstyle.css
@@ -12,7 +12,7 @@ a:active {
 }
 
 body{
-    background-image: url(/images/japan/pinkbg.jpg);
+    background-image: url(images/japan/pinkbg.jpg);
     background-repeat: repeat;
     background-size: cover;
     /*background-color: #ffc2d1;*/
